apps/mealie/mealie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
spec:
  progressDeadlineSeconds: 1800
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
      app.kubernetes.io/instance: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
        app.kubernetes.io/instance: mealie
      annotations:
        iscsi.stevevaradi.me/eio-remediate: "true"
    spec:
      containers:
        - name: mealie
          # renovate: datasource=docker depName=ghcr.io/mealie-recipes/mealie
          image: ghcr.io/mealie-recipes/mealie:v3.28.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
          startupProbe:
            httpGet:
              path: /api/app/about
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 180
          readinessProbe:
            httpGet:
              path: /api/app/about
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /api/app/about
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /app/data
              name: mealie-data
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              memory: 576Mi
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-mealie-mealie-data
