apps/mealie/mealie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
