apps/mealie/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: mealie
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Mealie"
    gethomepage.dev/group: "Home"
    gethomepage.dev/icon: "mealie.png"
    gethomepage.dev/description: "Recipes"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-mealie
  hostnames:
    - mealie.stevevaradi.me
  rules:
    - backendRefs:
        - name: mealie
          port: 9000
